--- a/ref-portals/index.html
+++ b/ref-portals/index.html
@@ -7,7 +7,8 @@
     <title>Refs & Portals</title>
   </head>
   <body>
-    <div id="modal"></div>
+        <!-- Attach modal function to this div -->
+    <div id="modal"></div> 
     <div id="content">
       <header>
         <h1>The <em>Almost</em> Final Countdown</h1>
